# ProductionReady_MLModel

./: README.md  collection.py  experiment_model.ipynb  model.py  model_service.py  preparation.py  pyproject.toml
models/: rf_v1
